Adds link to Simon video moves to past.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date          |    Time     | Streamers                                             | Show                                                               |
 | :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------- |
-|  Friday, August 5    | 9:30 AM UTC | [Simon Prickett][simon]                               | IoT with Redis: Introduction                                       |
 |  Tuesday, August 9   | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
 | Wednesday, August 10 | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                                  |
 |  Friday, August 12   | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy             |
@@ -47,6 +46,7 @@ Past events:
 
 |        Date          |    Time     | Streamers                                             | Show                                                                     |
 | :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------------- |
+|  Friday, August 5    | 9:30 AM UTC | [Simon Prickett][simon]                               | [IoT with Redis: Introduction][11]                                       |
 | Wednesday, August 3  | 6:00 PM UTC | [Steve Lorello][steve]                                | [Steve Works on Redis OM .NET][10]                                       |
 |  Tuesday, August 2   | 6:00 PM UTC | [Savannah Norem][norem]                               | [savannah_streams_in_snake_case][9]                                      |
 |   Friday, July 29    | 4:00 PM UTC | [Savannah Norem][norem], [Simon Prickett][simon]      | [First Steps to Open Source Contribution][8]                             |
@@ -89,6 +89,7 @@ Past events:
 [yt]: https://www.youtube.com/redisinc
 
 <!-- Links to specific videos -->
+[11]: https://www.youtube.com/watch?v=1F2nmm2jBjA
 [10]: https://www.youtube.com/watch?v=_HyV2OkMUCw
 [9]: https://www.youtube.com/watch?v=y5VXze8xtEA
 [8]: https://www.youtube.com/watch?v=SnKeNYJ_qsQ
