Added my recurring stream and first instance of it.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -26,6 +26,7 @@ Check out our upcoming events:
 | :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------- |
 |  Tuesday, August 9   | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
 | Wednesday, August 10 | 6:00 PM UTC | [Steve Lorello][steve]                                | Coding with Steve                                                  |
+| Thursday, August 11  | 9:00 AM UTC | [Simon Prickett][simon]                               | Simon's Things on Thursdays                                        |
 |  Friday, August 12   | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy             |
 
   </TabItem>
@@ -33,11 +34,12 @@ Check out our upcoming events:
 
 Sometimes we're on the road speaking at in-person events or enjoying a well deserved vacation. But when we're not, here's our weekly streaming schedule:
 
-|    Day    |    Time    | Streamers               | Show                                                             |
-| :-------: | :--------: | :---------------------- | :--------------------------------------------------------------- |
-|  Tuesday  | 2:00 PM ET | [Savannah Norem][norem] | [savannah_streams_in_snake_case][twitch]                         |
-| Wednesday | 2:00 PM ET | [Steve Lorello][steve]  | [Coding with Steve][twitch]                                      |
-|  Friday   | 2:00 PM ET | [Guy Royse][guy]        | [Web, Whimsy, and Redis Stack: Random Projects with Guy][twitch] |
+|    Day    |    Time     | Streamers                | Show                                                             |
+| :-------: | :---------: | :----------------------- | :--------------------------------------------------------------- |
+|  Tuesday  | 2:00 PM ET  | [Savannah Norem][norem]  | [savannah_streams_in_snake_case][twitch]                         |
+| Wednesday | 2:00 PM ET  | [Steve Lorello][steve]   | [Coding with Steve][twitch]                                      |
+| Thursday  | 9:00 AM UTC | [Simon Prickett][simon]  | [Simon's Things on Thursdays][twitch]                            |
+|  Friday   | 2:00 PM ET  | [Guy Royse][guy]         | [Web, Whimsy, and Redis Stack: Random Projects with Guy][twitch] |
 
   </TabItem>
   <TabItem value="past">
