Updated Simon's link.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -82,7 +82,7 @@ Past events:
 [guy]: https://twitter.com/guyroyse
 [justin]: https://twitter.com/JustCastilla
 [norem]: https://twitter.com/sav_norem
-[simon]: https://twitter.com/simon_prickett
+[simon]: https://simonprickett.dev
 [steve]: https://twitter.com/slorello
 [suze]: https://twitter.com/SuzeShardlow
 
