Add redis insider michael social link to profile

--- a/docs/get-involved/redis-insiders/michael-owolabi/index-michael-owolabi.mdx
+++ b/docs/get-involved/redis-insiders/michael-owolabi/index-michael-owolabi.mdx
@@ -17,3 +17,8 @@ import Michael from "./images/insider_michael_owolabi.png"
 "I applied to become a Redis Insider because as a lover of Redis myself, I wanted an opportunity to meet with and learn from other Redis professionals around the globe and also share my knowledge of Redis through speaking and writing."
 
 <div style={{clear: "left"}}></div>
+
+Find Michael online at: 
+
+* [Twitter](https://twitter.com/iMichaelOwolabi/)
+* [LinkedIn](https://www.linkedin.com/in/imichaelowolabi/)
