--- a/docs/get-involved/redis-insiders/moiz-kapasi/index-moiz-kapasi.mdx
+++ b/docs/get-involved/redis-insiders/moiz-kapasi/index-moiz-kapasi.mdx
@@ -10,7 +10,7 @@ import Moiz from "./images/insider_moiz_kapasi.jpg"
 
 <img alt="Moiz Kapasi headshot" src={Moiz} style={{float: "left", 'margin-right': "50px"}}/>
 
-"I am a Solution Architect at Capgemini and have been using Redis for 1.5 years. I build various applications in the enterprise landscape of a major car manufacturer in Europe for Manufacturing / Supply chain using Java/J2EE.
+"I am a Solution Architect at Capgemini and have been using Redis for 1.5 years. I build/manage/enhance various applications in the enterprise landscape of a major car manufacturer in Europe using Java/J2EE.
 
 "I am based in Paris, France. In my spare time, I enjoy cycling along the River Seine, camping, reading classic literature and philately.
 
