--- a/docs/get-involved/redis-insiders/moiz-kapasi/index-moiz-kapasi.mdx
+++ b/docs/get-involved/redis-insiders/moiz-kapasi/index-moiz-kapasi.mdx
@@ -10,10 +10,14 @@ import Moiz from "./images/insider_moiz_kapasi.jpg"
 
 <img alt="Moiz Kapasi headshot" src={Moiz} style={{float: "left", 'margin-right': "50px"}}/>
 
-"I am a Solution Architect at Capgemini and have been using Redis for 1.5 years. I build various applications in the enterprise landscape of a major car manufacturer in Europe for Manufacturing / Supply chain using Java/J2EE.
+"I am a Solution Architect at Capgemini and have been using Redis for 1.5 years. I build/manage/enhance various applications in the enterprise landscape of a major car manufacturer in Europe chain using Java/J2EE stack.
 
 "I am based in Paris, France. In my spare time, I enjoy cycling along the River Seine, camping, reading classic literature and philately.
 
 "I applied to become a Redis Insider because the simplicity and the power of Redis fascinates me. We can do so much with this incredible software. I dug deep in Redis only in the last 15 months and I feel I am still scratching the surface. So many more things to do, so many applications to be made better, faster and more reliable by using the power of Redis."
 
 <div style={{clear: "left"}}></div>
+
+Find Moiz online at: 
+
+* [Twitter](https://twitter.com/kapasimoiz/)
