--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -25,9 +25,7 @@ Check out our upcoming events:
 |        Date          |    Time     | Streamers                                             | Show                                                               |
 | :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------- |
 |  Friday, August 12   | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy             |
-     | :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------- |
-|  Tuesday, August 16   | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                  
-     | :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------- |
+|  Tuesday, August 16  | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
 
   </TabItem>
   <TabItem value="recurring">
