--- a/docs/get-involved/redis-insiders/stevan-thomas/index-stevan-thomas.mdx
+++ b/docs/get-involved/redis-insiders/stevan-thomas/index-stevan-thomas.mdx
@@ -3,7 +3,7 @@ id: index-stevan-thomas
 title: Stevan Thomas, Redis Insider
 sidebar_label: Stevan Thomas
 slug: /redis-insiders/stevan-thomas/
-authors: [suze]
+authors: [suze, stevan]
 custom_edit_url: null
 pagination_next: null
 ---
