Adds Moiz as an author of his page.

--- a/docs/get-involved/redis-insiders/moiz-kapasi/index-moiz-kapasi.mdx
+++ b/docs/get-involved/redis-insiders/moiz-kapasi/index-moiz-kapasi.mdx
@@ -3,7 +3,7 @@ id: index-moiz-kapasi
 title: Moiz Kapasi, Redis Insider
 sidebar_label: Moiz Kapasi
 slug: /redis-insiders/moiz-kapasi/
-authors: [suze]
+authors: [suze, moiz]
 custom_edit_url: null
 ---
 import Moiz from "./images/insider_moiz_kapasi.jpg"
