--- a/docs/get-involved/redis-insiders/michael-owolabi/index-michael-owolabi.mdx
+++ b/docs/get-involved/redis-insiders/michael-owolabi/index-michael-owolabi.mdx
@@ -3,7 +3,7 @@ id: index-michael-owolabi
 title: Michael Owolabi, Redis Insider
 sidebar_label: Michael Owolabi
 slug: /redis-insiders/michael-owolabi/
-authors: [suze]
+authors: [suze, michael]
 custom_edit_url: null
 ---
 import Michael from "./images/insider_michael_owolabi.png"
