Adds Jyotsna as an author of her page.

--- a/docs/get-involved/redis-insiders/jyotsna-gupta/index-jyotsna-gupta.mdx
+++ b/docs/get-involved/redis-insiders/jyotsna-gupta/index-jyotsna-gupta.mdx
@@ -3,7 +3,7 @@ id: index-jyotsna-gupta
 title: Jyotsna Gupta, Redis Insider
 sidebar_label: Jyotsna Gupta
 slug: /redis-insiders/jyotsna-gupta/
-authors: [suze]
+authors: [suze, jyotsna]
 custom_edit_url: null
 ---
 import Jyotsna from "./images/insider_jyotsna_gupta.jpg"
