Adds Simon Aug 18 stream.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -26,6 +26,7 @@ Check out our upcoming events:
 | :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------- |
 |  Friday, August 12   | 6:00 PM UTC | [Guy Royse][guy]                                      | Web, Whimsy, and Redis Stack: Random Projects with Guy             |
 |  Tuesday, August 16  | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
+| Thursday, August 18  | 9:30 AM UTC | [Simon Prickett][simon]                               | Simon's Things on Thursdays                                        |
 
   </TabItem>
   <TabItem value="recurring">
