--- a/docs/create/windows/index-windows.mdx
+++ b/docs/create/windows/index-windows.mdx
@@ -30,7 +30,8 @@ Reboot Windows after making the change — note that you only need to do this on
 ```powershell
  start ms-windows-store:
 ```
-Then download the latest Ubuntu at this time its 20..4 LST. 
+
+Then search for Ubuntu, or your preferred distribution of Linux, and download the latest version. 
 After it download run it and make sure it finish instlation.
 
 ### Step 3: Install Redis server
