Moved Savannah's Aug 16 stream to past, added yt link.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date          |    Time     | Streamers                                             | Show                                                               |
 | :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------- |
-|  Tuesday, August 16  | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
 | Thursday, August 18  | 9:30 AM UTC | [Simon Prickett][simon]                               | Simon's Things on Thursdays                                        |
 
   </TabItem>
@@ -46,6 +45,7 @@ Past events:
 
 |        Date          |    Time     | Streamers                                             | Show                                                                     |
 | :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------------- |
+|  Tuesday, August 16  | 6:00 PM UTC | [Savannah Norem][norem]                               | [savannah_streams_in_snake_case][15]                                     |
 |  Friday, August 12   | 6:00 PM UTC | [Guy Royse][guy]                                      | [Web, Whimsy, and Redis Stack: Random Projects with Guy][14]             |
 | Wednesday, August 10 | 6:00 PM UTC | [Steve Lorello][steve]                                | [Coding with Steve][13]                                                  |
 |  Tuesday, August 9   | 6:00 PM UTC | [Savannah Norem][norem]                               | [savannah_streams_in_snake_case][12]                                     |
@@ -92,6 +92,7 @@ Past events:
 [yt]: https://www.youtube.com/redisinc
 
 <!-- Links to specific videos -->
+[15]: https://www.youtube.com/watch?v=cFnBfsbyhvU
 [14]: https://www.youtube.com/watch?v=FfD2nmCrocI
 [13]: https://www.youtube.com/watch?v=eSnmtf3zcNc
 [12]: https://www.youtube.com/watch?v=w1S-ZuCJc2Y
