--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -25,7 +25,11 @@ Check out our upcoming events:
 |        Date          |    Time     | Streamers                                             | Show                                                               |
 | :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------- |
 | Thursday, August 25  | 9:30 AM UTC | [Simon Prickett][simon]                               | Simon's Things on Thursdays                                        |
+| Tuesday, August 23  | 6:00 PM UTC | [Savannah Norem][norem]                              | savannah_streams_in_snake_case                                    |
+| Tuesday, August 30  | 6:00 PM UTC | [Savannah Norem][norem]                              | savannah_streams_in_snake_case                                    |
 
+     
+     
   </TabItem>
   <TabItem value="recurring">
 
