updating streams, some rearrangments

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,10 +24,11 @@ Check out our upcoming events:
 
 |        Date          |    Time     | Streamers                                             | Show                                                               |
 | :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------- |
+| Tuesday,  August 23  | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
+| Thursday, August 24  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve works on Redis OM .NET Episode 5                             |
 | Thursday, August 25  | 9:30 AM UTC | [Simon Prickett][simon]                               | Simon's Things on Thursdays                                        |
-| Tuesday, August 23  | 6:00 PM UTC | [Savannah Norem][norem]                              | savannah_streams_in_snake_case                                    |
-| Tuesday, August 30  | 6:00 PM UTC | [Savannah Norem][norem]                              | savannah_streams_in_snake_case                                    |
-
+| Tuesday,  August 30  | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
+| Thursday, August 31  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve works on Redis OM .NET Episode 6                             |
      
      
   </TabItem>
