--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -22,15 +22,17 @@ Redis Live hosts a variety of live-streamed content on [Twitch][twitch] and [You
 
 Check out our upcoming events:
 
-|        Date          |    Time     | Streamers                                             | Show                                                               |
-| :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------- |
-| Tuesday,  August 23  | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
-| Thursday, August 24  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve works on Redis OM .NET Episode 5                             |
-| Thursday, August 25  | 9:30 AM UTC | [Simon Prickett][simon]                               | Simon's Things on Thursdays                                        |
-| Tuesday,  August 30  | 6:00 PM UTC | [Savannah Norem][norem]                               | savannah_streams_in_snake_case                                     |
-| Thursday, August 31  | 6:00 PM UTC | [Steve Lorello][steve]                                | Steve works on Redis OM .NET Episode 6                             |
-     
-     
+|        Date           |    Time     | Streamers                                            | Show                                                |
+| :-------------------: | :---------: | :--------------------------------------------------- | :-------------------------------------------------- |
+| Tuesday, August 23    | 6:00 PM UTC | [Savannah Norem][norem]                              | savannah_streams_in_snake_case                      |
+| Wednesday, August 24  | 6:00 PM UTC | [Steve Lorello][steve]                               | Coding with Steve: Redis OM .NET Episode 5          |
+| Thursday, August 25   | 9:30 AM UTC | [Simon Prickett][simon]                              | Simon's Things on Thursdays                         |
+| Friday, August 26     | 6:00 PM UTC | [Guy Royse][guy]                                     | Web, Whimsy, and Redis Stack: Redis MUD Episode 2   |
+| Tuesday, August 30    | 6:00 PM UTC | [Savannah Norem][norem]                              | savannah_streams_in_snake_case                      |
+| Wednesday, August 31  | 6:00 PM UTC | [Steve Lorello][steve]                               | Coding with Steve: Redis OM .NET Episode 6          |
+| Thursday, September 1 | 9:30 AM UTC | [Simon Prickett][simon]                              | Simon's Things on Thursdays                         |
+| Friday, September 2   | 6:00 PM UTC | [Guy Royse][guy]                                     | Web, Whimsy, and Redis Stack: Redis MUD Episode 3   |
+
   </TabItem>
   <TabItem value="recurring">
 
