Update Sept 1 stream title.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -27,7 +27,7 @@ Check out our upcoming events:
 | Friday, August 26     | 6:00 PM UTC | [Guy Royse][guy]          | Web, Whimsy, and Redis Stack: Redis MUD - Episode 2                |
 | Tuesday, August 30    | 6:00 PM UTC | [Savannah Norem][norem]   | savannah_streams_in_snake_case: Stream a Little Stream - Episode 2 |
 | Wednesday, August 31  | 6:00 PM UTC | [Steve Lorello][steve]    | Coding with Steve: Redis OM .NET - Episode 6                       |
-| Thursday, September 1 | 9:30 AM UTC | [Simon Prickett][simon]   | Simon's Things on Thursdays - Episode 3                            |
+| Thursday, September 1 | 9:30 AM UTC | [Simon Prickett][simon]   | Simon's Things on Thursdays - Hardware Bloom Filter                |
 | Friday, September 2   | 6:00 PM UTC | [Guy Royse][guy]          | Web, Whimsy, and Redis Stack: Redis MUD - Episode 3                |
 
   </TabItem>
