Moved Aug 30 stream to past, added yt link.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,7 +24,6 @@ Check out our upcoming events:
 
 |        Date           |    Time     | Streamers                 | Show                                                               |
 | :-------------------: | :---------: | :------------------------ | :----------------------------------------------------------------- |
-| Tuesday, August 30    | 6:00 PM UTC | [Savannah Norem][norem]   | savannah_streams_in_snake_case: Stream a Little Stream - Episode 2 |
 | Wednesday, August 31  | 6:00 PM UTC | [Steve Lorello][steve]    | Coding with Steve: Redis OM .NET - Episode 6                       |
 | Thursday, September 1 | 9:30 AM UTC | [Simon Prickett][simon]   | Simon's Things on Thursdays - Hardware Bloom Filter                |
 | Friday, September 2   | 6:00 PM UTC | [Guy Royse][guy]          | Web, Whimsy, and Redis Stack: Redis MUD - Episode 3                |
@@ -48,6 +47,7 @@ Past events:
 
 |        Date          |    Time     | Streamers                                             | Show                                                                     |
 | :------------------: | :---------: | :---------------------------------------------------- | :----------------------------------------------------------------------- |
+| Tuesday, August 30   | 6:00 PM UTC | [Savannah Norem][norem]                               | [savannah_streams_in_snake_case: Stream a Little Stream - Episode 2][20] |
 | Friday, August 26    | 6:00 PM UTC | [Guy Royse][guy]                                      | [Web, Whimsy, and Redis Stack: Redis MUD - Episode 2][19]                |
 | Wednesday, August 24 | 6:00 PM UTC | [Steve Lorello][steve]                                | [Coding with Steve: Redis OM .NET - Episode 5][18]                       |
 | Tuesday, August 23   | 6:00 PM UTC | [Savannah Norem][norem]                               | [savannah_streams_in_snake_case: Stream a Little Stream - Episode 1][17] |
@@ -99,6 +99,7 @@ Past events:
 [yt]: https://www.youtube.com/redisinc
 
 <!-- Links to specific videos -->
+[20]: https://www.youtube.com/watch?v=7yTGbTaoWnA
 [19]: https://www.youtube.com/watch?v=9br25zr9jv0
 [18]: https://www.youtube.com/watch?v=922nnTcThLA
 [17]: https://www.youtube.com/watch?v=QDfGI6jpwqA
