Changes the link on Suze's streamer profile.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -93,7 +93,7 @@ Past events:
 [norem]: https://twitter.com/sav_norem
 [simon]: https://simonprickett.dev
 [steve]: https://twitter.com/slorello
-[suze]: https://twitter.com/SuzeShardlow
+[suze]: https://suze.dev
 
 <!-- Links to platforms -->
 [twitch]: https://twitch.tv/redisinc
