Updates the first sentence to include Discord.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -8,7 +8,7 @@ custom_edit_url: null
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-Redis Live hosts a variety of live-streamed content on [Twitch][twitch] and [YouTube][yt]. Follow us to get notified when we go live. And, you know, like and subscribe.
+The Redis Developer Relations Team hosts a variety of live content on [Twitch][twitch], [YouTube][yt] and [Discord]. Follow us to get notified when we go live. And, you know, like and subscribe.
 
 <Tabs
    defaultValue="upcoming"
