Adds the Discord link as a variable.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -98,6 +98,7 @@ Past events:
 <!-- Links to platforms -->
 [twitch]: https://twitch.tv/redisinc
 [yt]: https://www.youtube.com/redisinc
+[discord]: https://discord.gg/redis
 
 <!-- Links to specific videos -->
 [22]: https://www.youtube.com/watch?v=Ym4g5iti3bo
