--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,9 +24,11 @@ Check out our upcoming events:
 
 |        Date           |    Time     | Streamers                 | Show                                                               |
 | :-------------------: | :---------: | :------------------------ | :----------------------------------------------------------------- |
-| Friday, September 2   | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem] and [Simon Prickett][simon]          | This Week On Discord              |
+| Friday, September 2   | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem] and [Simon Prickett][simon]          | This Week On Discord |
 | Friday, September 2   | 6:00 PM UTC | [Guy Royse][guy]          | Web, Whimsy, and Redis Stack: Redis MUD - Episode 3                |
 | Thursday, September 8 | 9:30 AM UTC | [Simon Prickett][simon]   | Simon's Things on Thursdays - New IoT Project                      |
+| Friday, September 9   | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | This Week On Discord |
+
 
   </TabItem>
   <TabItem value="recurring">
