--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -22,12 +22,13 @@ The Redis Developer Relations Team hosts a variety of live content on [Twitch][t
 
 Check out our upcoming events:
 
-|        Date           |    Time     | Streamers                 | Show                                                               |
-| :-------------------: | :---------: | :------------------------ | :----------------------------------------------------------------- |
-| Friday, September 2   | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem] and [Simon Prickett][simon]          | This Week On Discord |
-| Friday, September 2   | 6:00 PM UTC | [Guy Royse][guy]          | Web, Whimsy, and Redis Stack: Redis MUD - Episode 3                |
-| Thursday, September 8 | 9:30 AM UTC | [Simon Prickett][simon]   | Simon's Things on Thursdays - New IoT Project                      |
-| Friday, September 9   | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | This Week On Discord |
+|        Date            |    Time     | Streamers                 | Show                                                               |
+| :--------------------: | :---------: | :------------------------ | :----------------------------------------------------------------- |
+| Friday, September 2    | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem] and [Simon Prickett][simon]          | This Week On Discord |
+| Friday, September 2    | 6:00 PM UTC | [Guy Royse][guy]          | Web, Whimsy, and Redis Stack: Redis MUD - Episode 3                |
+| Thursday, September 8  | 9:30 AM UTC | [Simon Prickett][simon]   | Simon's Things on Thursdays - New IoT Project                      |
+| Friday, September 9    | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | This Week On Discord |
+| Friday, September 16   | 5:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin] | This Week On Discord |
 
 
   </TabItem>
