Adds the 23rd September Discord stream.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -29,6 +29,7 @@ Check out our upcoming events:
 | Thursday, September 8  | 9:30 AM UTC | [Simon Prickett][simon]   | Simon's Things on Thursdays - New IoT Project                      |
 | Friday, September 9    | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | This Week On Discord |
 | Friday, September 16   | 5:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin] | This Week On Discord |
+| Friday, September 23   | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | This Week On Discord |
 
 
   </TabItem>
