Adds the 8th September office hours.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -27,6 +27,7 @@ Check out our upcoming events:
 | Friday, September 2    | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem] and [Simon Prickett][simon]          | This Week On Discord |
 | Friday, September 2    | 6:00 PM UTC | [Guy Royse][guy]          | Web, Whimsy, and Redis Stack: Redis MUD - Episode 3                |
 | Thursday, September 8  | 9:30 AM UTC | [Simon Prickett][simon]   | Simon's Things on Thursdays - New IoT Project                      |
+| Thursday, September 8  | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs] |
 | Friday, September 9    | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | This Week On Discord |
 | Friday, September 16   | 5:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin] | This Week On Discord |
 | Friday, September 23   | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | This Week On Discord |
@@ -104,6 +105,7 @@ Past events:
 [twitch]: https://twitch.tv/redisinc
 [yt]: https://www.youtube.com/redisinc
 [discord]: https://discord.gg/redis
+[officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
 [22]: https://www.youtube.com/watch?v=Ym4g5iti3bo
