Adds the recurring Discord stream.

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -47,6 +47,7 @@ Sometimes we're on the road speaking at in-person events or enjoying a well dese
 | Wednesday | 2:00 PM ET  | [Steve Lorello][steve]   | [Coding with Steve][twitch]                                      |
 | Thursday  | 9:30 AM UTC | [Simon Prickett][simon]  | [Simon's Things on Thursdays][twitch]                            |
 | Thursday  | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]  | [Weekly Redis University Office Hours][officehrs] |
+| Friday    | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin]  | [This Week On Discord][twitch] |
 | Friday    | 2:00 PM ET  | [Guy Royse][guy]         | [Web, Whimsy, and Redis Stack: Random Projects with Guy][twitch] |
 
   </TabItem>
