--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -55,8 +55,9 @@ Past events:
 
 |         Date          |    Time     | Streamers                                                                                             | Show                                                                     |
 | :-------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------- |
+| Tuesday, September 6  | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case: Stream a Little Stream - Episode 3][25] |
 | Friday, September 2   | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | [Web, Whimsy, and Redis Stack: Redis MUD - Episode 3][24]                |
-| Friday, September 2   | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem] and [Simon Prickett][simon]                            | [This Week On Discord][23]                                     |
+| Friday, September 2   | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem] and [Simon Prickett][simon]                            | [This Week On Discord][23]                                               |
 | Thursday, September 1 | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Hardware Bloom Filter][22]                |
 | Wednesday, August 31  | 6:00 PM UTC | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 6][21]                       |
 | Tuesday, August 30    | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case: Stream a Little Stream - Episode 2][20] |
@@ -113,6 +114,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[25]: https://www.youtube.com/watch?v=gUTqalK2h94
 [24]: https://www.youtube.com/watch?v=Qo3tuD8fTNI
 [23]: https://www.youtube.com/watch?v=hmmkLzU_ymA
 [22]: https://www.youtube.com/watch?v=Ym4g5iti3bo
