--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,8 +24,6 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                               |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------- |
-| Thursday, September 8   | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                  |
-| Friday, September 9     | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                     |
 | Thursday, September 15  | 3:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Weekly Redis University Office Hours][officehrs]                  |
 | Friday, September 16    | 5:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [This Week On Discord][twitch]                                     |
 | Thursday, September 22  | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 2      |
@@ -55,8 +53,10 @@ Past events:
 
 |         Date          |    Time     | Streamers                                                                                             | Show                                                                     |
 | :-------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------- |
+| Friday, September 9   | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][28]                                               |
+| Thursday, September 8 | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                        |
 | Thursday, September 8 | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 1][27]      |
-| Wednesday, September 7| 6:00 PM UTC | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 7][26]
+| Wednesday, September 7| 6:00 PM UTC | [Steve Lorello][steve]                                                                                | [Coding with Steve: Redis OM .NET - Episode 7][26]                       |
 | Tuesday, September 6  | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | [savannah_streams_in_snake_case: Stream a Little Stream - Episode 3][25] |
 | Friday, September 2   | 6:00 PM UTC | [Guy Royse][guy]                                                                                      | [Web, Whimsy, and Redis Stack: Redis MUD - Episode 3][24]                |
 | Friday, September 2   | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem] and [Simon Prickett][simon]                            | [This Week On Discord][23]                                               |
@@ -116,6 +116,7 @@ Past events:
 [officehrs]: https://discord.com/channels/697882427875393627/981667564570706000
 
 <!-- Links to specific videos -->
+[28]: https://www.youtube.com/watch?v=F4mAMJWT1vg
 [27]: https://www.youtube.com/watch?v=8Q3jK5CAfNQ
 [26]: https://www.youtube.com/watch?v=_-YmsyWUQNo
 [25]: https://www.youtube.com/watch?v=gUTqalK2h94
