Fix extra "r" in PHP develop page

--- a/docs/develop/php/index-php.mdx
+++ b/docs/develop/php/index-php.mdx
@@ -54,7 +54,7 @@ apt install pkg-php-tools
 pecl install redis
 ```
 
-### Step 4. Opening a Connection to Redis Using PhpRredis
+### Step 4. Opening a Connection to Redis Using PhpRedis
 
 The following code creates a connection to Redis using Phpredis
 
