--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -24,8 +24,8 @@ Check out our upcoming events:
 
 |        Date             |    Time     | Streamers                                                                                             | Show                                                               |
 | :---------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------- |
-| Thursday, September 15  | 3:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Weekly Redis University Office Hours][officehrs]                  |
-| Friday, September 16    | 5:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [This Week On Discord][twitch]                                     |
+| Tuesday, September 20  | 6:00 PM UTC | [Savannah Norem][norem]                                                                               | savannah_streams_in_snake_case - Stream a Little Stream - Episode 4      |
+| Wednesday, September 21  | 6:00 PM UTC | [Steve Lorello][steve]                                                                               | Coding with Steve - Steve Streams on Streams      |     
 | Thursday, September 22  | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 2      |
 | Thursday, September 22  | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                  |
 | Friday, September 23    | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][twitch]                                     |
@@ -53,6 +53,8 @@ Past events:
 
 |         Date          |    Time     | Streamers                                                                                             | Show                                                                     |
 | :-------------------: | :---------: | :---------------------------------------------------------------------------------------------------- | :----------------------------------------------------------------------- |
+| Friday, September 16    | 5:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [This Week On Discord][twitch]  
+| Thursday, September 15  | 3:00 PM UTC | [Savannah Norem][norem] and [Justin Castilla][justin]                                                 | [Weekly Redis University Office Hours][officehrs]                  |                                   |
 | Friday, September 9   | 5:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [This Week On Discord][28]                                               |
 | Thursday, September 8 | 3:00 PM UTC | [Suze Shardlow][Suze], [Savannah Norem][norem], [Simon Prickett][simon] and [Justin Castilla][justin] | [Weekly Redis University Office Hours][officehrs]                        |
 | Thursday, September 8 | 9:30 AM UTC | [Simon Prickett][simon]                                                                               | [Simon's Things on Thursdays - Raspberry Pi Pico W - Episode 1][27]      |
