title/ description modified as per SEO recommendations by chris

--- a/docs/create/homebrew/index-homebrew.mdx
+++ b/docs/create/homebrew/index-homebrew.mdx
@@ -1,10 +1,15 @@
 ---
 id: index-homebrew
 title: Create a Redis database on Mac OS
+description: A step by step guide to create a Redis database on Mac OS. Learn how to install Homebrew, installing Redis database and more
 sidebar_label: Redis on Mac OS
 slug: /create/homebrew/
 authors: [ajeet]
 ---
+
+<head>
+  <title>Brew Install Redis | Redis Developer Hub</title>
+</head>
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
