--- a/docs/develop/php/index-php.mdx
+++ b/docs/develop/php/index-php.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-php
-title: Php and Redis
+title: PHPRedis - Redis client library for PHP
 sidebar_label: Php
 slug: /develop/php/
 authors: [ajeet]
