--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-python
-title: Python and Redis
+title: Python with Redis
 sidebar_label: Overview
 slug: /develop/python/
 authors: [ajeet]
